copy and pasted the data generation code

--- a/final-report.ipynb
+++ b/final-report.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -21,7 +7,249 @@
         "id": "A9n7t2aGAfxO"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import torch.utils.data\n",
+        "import matplotlib.pyplot as plt\n",
+        "from mpl_toolkits.mplot3d import Axes3D\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    import sys\n",
+        "    sys.path.append('.')\n",
+        "from utils.quaternion import q_angle, q_rotate\n",
+        "\n",
+        "class CubeEdge(torch.utils.data.Dataset):\n",
+        "    \"\"\"Generate CubeEgde dataset on the fly.\n",
+        "    1. Sample a cube.\n",
+        "    2. Add noise to vertices if training\n",
+        "    2. Apply random shear on xy plane\n",
+        "    Vertices ind :\n",
+        "      7----6   \n",
+        "     /|   /|\n",
+        "    3----2 |   \n",
+        "    | 4--|-5 \n",
+        "    |/   |/\n",
+        "    0----1 \n",
+        "    \"\"\"\n",
+        "    def __init__(self, train, num_edges=4, num_samples=2000, use_quaternion=True, random_rotation=False, sigma=0.1):\n",
+        "        \"\"\"\n",
+        "        Params:\n",
+        "            train: (bool) whether is training set\n",
+        "            num_edges: (int) number of edges\n",
+        "            num_samples: (int) number of samples\n",
+        "            use_quaternion: (bool) whether convert to quaternion\n",
+        "            random_rotation: (bool) whether apply random rotation\n",
+        "            sigma: (float) standard deviation of the noise applied to vertices\n",
+        "        \"\"\"\n",
+        "        self.seed_is_set = False  # multi threaded loading\n",
+        "        self.num_samples = num_samples\n",
+        "        self.train = train\n",
+        "        self.use_quaternion = use_quaternion\n",
+        "        self.random_rotation = random_rotation\n",
+        "        self.sigma = sigma \n",
+        "        self.vertices = np.array([[1, 0, 0], [1, 1, 0], [1, 1, 1], [1, 0, 1], [0, 0, 0], [0, 1, 0], [0, 1, 1], [0, 0, 1]], dtype=\"float32\") * 2 - 1.\n",
+        "       \n",
+        "        # All possible shapes\n",
+        "        if num_edges == 4:\n",
+        "            self.num_shapes = 4\n",
+        "            self.shapes = np.array([self._make_shape(0, 1, 2, 3, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5)])    \n",
+        "        elif num_edges == 5:\n",
+        "            self.num_shapes = 8\n",
+        "            self.shapes = np.array([self._make_shape(0, 1, 2, 3, 0, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1)])\n",
+        "        elif num_edges == 6:\n",
+        "            self.num_shapes = 16\n",
+        "            self.shapes = np.array([self._make_shape(0, 1, 2, 3, 0, 1, 2),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 1, 5),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 7),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 5),                                    \n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 5),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 2),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 5),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 5),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 2),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 7),                                    \n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 0),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 2)])    \n",
+        "\n",
+        "        elif num_edges == 7:\n",
+        "            self.num_shapes = 32\n",
+        "            self.shapes = np.array([self._make_shape(0, 1, 2, 3, 0, 1, 2, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 1, 2, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 1, 5, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 1, 5, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 7, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 7, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 5, 1),  \n",
+        "                                    self._make_shape(0, 1, 2, 3, 0, 4, 5, 6),                                  \n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 0, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 0, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 5, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 4, 5, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 2, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 2, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 5, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 3, 7, 6, 5, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 0, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 0, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 5, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 4, 5, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 2, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 2, 6),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 0, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 7, 3, 0, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 0, 1),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 0, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 7, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 4, 7, 6),                                    \n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 0, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 0, 4),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 2, 3),\n",
+        "                                    self._make_shape(0, 1, 2, 6, 5, 1, 2, 6)])    \n",
+        "\n",
+        "    def _make_shape(self, *vertice_ind):\n",
+        "        shape = []\n",
+        "        for ind in vertice_ind:\n",
+        "            shape.append(self.vertices[ind])\n",
+        "        return np.array(shape)\n",
+        "    \n",
+        "    def set_seed(self, seed):\n",
+        "        if not self.seed_is_set:\n",
+        "            self.seed_is_set = True\n",
+        "            np.random.seed(seed)\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return self.num_samples\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "        \"\"\"\n",
+        "        Return:\n",
+        "            shape: (np.array) (num_edges + 1, 3) if use_quaternion=True, \n",
+        "                              (num_edges, 4) otherwise.  \n",
+        "            shape_ind: (int) which shape is sampled\n",
+        "        \"\"\"\n",
+        "        if self.train:\n",
+        "            self.set_seed(index)\n",
+        "        else:\n",
+        "            self.set_seed(index + self.num_samples)\n",
+        "        shape_ind = np.random.randint(self.num_shapes)\n",
+        "        shape = self.shapes[shape_ind]\n",
+        "        if not self.train:\n",
+        "            shape = self.add_noise(shape, self.sigma)\n",
+        "        shape = self.apply_random_shear(shape)\n",
+        "        if self.random_rotation:\n",
+        "            shape = self.apply_random_rotation(shape)\n",
+        "        if self.use_quaternion:\n",
+        "            shape = self.pos2qu(shape)\n",
+        "        return np.float32(shape), shape_ind\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def add_noise(shape, sigma):\n",
+        "        shape = shape.copy()\n",
+        "        for i in range(shape.shape[0]):\n",
+        "            shape[i] += np.random.randn(3) * sigma\n",
+        "        return shape        \n",
+        "\n",
+        "    @staticmethod\n",
+        "    def apply_random_shear(shape):\n",
+        "        \"\"\"random shear on xy plane\n",
+        "        \"\"\"\n",
+        "        shape = shape.copy()\n",
+        "        hxy, hxz, hyx, hyz, hzx, hzy = np.random.randn(6)\n",
+        "        # Keep axis z unchanged\n",
+        "        hzx = 0\n",
+        "        hzy = 0\n",
+        "        for i in range(shape.shape[0]):\n",
+        "            shape[i][0], shape[i][1], shape[i][2] = shape[i][0] + hxy * shape[i][1] + hxz * shape[i][2], \\\n",
+        "                                                    shape[i][1] + hyx * shape[i][0] + hyz * shape[i][2], \\\n",
+        "                                                    shape[i][2] + hzx * shape[i][0] + hzy * shape[i][1]\n",
+        "        return shape\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def apply_random_rotation(shape):\n",
+        "        shape = shape.copy()\n",
+        "        angle_x, angle_y, angle_z = np.random.rand(3) * 2 * np.pi \n",
+        "        for i in range(shape.shape[0]):\n",
+        "            # x roll\n",
+        "            shape[i][1], shape[i][2] = np.cos(angle_x) * shape[i][1] - np.sin(angle_x) * shape[i][2], \\\n",
+        "                                       np.sin(angle_x) * shape[i][1] + np.cos(angle_x) * shape[i][2]\n",
+        "            # y roll\n",
+        "            shape[i][0], shape[i][2] = np.cos(angle_y) * shape[i][0] - np.sin(angle_y) * shape[i][2], \\\n",
+        "                                       np.sin(angle_y) * shape[i][0] + np.cos(angle_y) * shape[i][2]\n",
+        "            # z roll\n",
+        "            shape[i][0], shape[i][1] = np.cos(angle_z) * shape[i][0] - np.sin(angle_z) * shape[i][1], \\\n",
+        "                                       np.sin(angle_z) * shape[i][0] + np.cos(angle_z) * shape[i][1]\n",
+        "        return shape\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def pos2qu(shape):\n",
+        "        \"\"\"Convert 3D coordinates to quaternion rotation\n",
+        "        \"\"\"\n",
+        "        num_vertices = shape.shape[0]\n",
+        "        q_shape = np.zeros([num_vertices - 1, 4])\n",
+        "        q_shape[0] = q_angle(shape[1] - shape[0], shape[1] - shape[0])\n",
+        "        for i in range(1, num_vertices - 1):\n",
+        "            q_shape[i] = q_angle(shape[i - 1] - shape[i], shape[i + 1] - shape[i])\n",
+        "        return q_shape\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def plot_cube(ax, shape, name):\n",
+        "        for i in range(shape.shape[0]):\n",
+        "            ax.scatter(shape[i][0], shape[i][1], shape[i][2], marker='o')\n",
+        "        for i in range(shape.shape[0] - 1):\n",
+        "            ax.plot([shape[i][0], shape[i + 1][0]], [shape[i][1], shape[i + 1][1]], [shape[i][2], shape[i + 1][2]])\n",
+        "        ax.set_title(name)\n",
+        "        x_max, x_min = np.max(shape[:, 0]), np.min(shape[:, 0])\n",
+        "        y_max, y_min = np.max(shape[:, 1]), np.min(shape[:, 1])\n",
+        "        z_max, z_min = np.max(shape[:, 2]), np.min(shape[:, 2])\n",
+        "        max_range = np.max([x_max - x_min, y_max - y_min, z_max - z_min]) / 2.0\n",
+        "        mid_x = (x_max + x_min) / 2.0\n",
+        "        mid_y = (y_max + y_min) / 2.0\n",
+        "        mid_z = (z_max + z_min) / 2.0\n",
+        "        ax.set_xlim(mid_x - max_range, mid_x + max_range)\n",
+        "        ax.set_ylim(mid_y - max_range, mid_y + max_range)\n",
+        "        ax.set_zlim(mid_z - max_range, mid_z + max_range)\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    cube_edges = CubeEdge(train=True, num_edges=4, use_quaternion=False)\n",
+        "    rows = 4\n",
+        "    cols = 6\n",
+        "    imsize = 2.5\n",
+        "    fig = plt.figure('samples', figsize=(imsize * cols, imsize * rows))\n",
+        "    for i in range(rows * cols):\n",
+        "        shape, label = cube_edges[i]    \n",
+        "        ax = fig.add_subplot(rows, cols, i + 1, projection='3d')\n",
+        "        CubeEdge.plot_cube(ax, shape, label)\n",
+        "    plt.show()"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
