--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -183,6 +183,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from train import *\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.utils.data import DataLoader\n",
@@ -190,9 +191,8 @@
         "import matplotlib.pyplot as plt\n",
         "import time\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    import sys\n",
-        "    sys.path.append('.')\n",
+        "import sys\n",
+        "sys.path.append('.')\n",
         "from models import *\n",
         "from cubeEdgeData import CubeEdge\n",
         "\n",
@@ -201,61 +201,20 @@
         "        else \"mps\" if torch.backends.mps.is_available()\n",
         "        else \"cpu\"\n",
         "    )\n",
-        "def train(model,data,epochs,lr,batch_size):\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
-        "    optimizer = torch.optim.Adam(model.parameters(),lr=lr)\n",
         "\n",
-        "    train_dataloader = DataLoader(data,batch_size=batch_size,shuffle=True)\n",
-        "    loss = 0\n",
-        "    net.to(device=device)\n",
-        "    for epoch in range(epochs):\n",
-        "        net.train()\n",
-        "        #Forward pass\n",
-        "        for input,label in train_dataloader:\n",
-        "            input.to(device)\n",
-        "            label.to(device)\n",
-        "            optimizer.zero_grad()\n",
-        "            outputs = model(input)\n",
-        "            loss = criterion(outputs,label)\n",
-        "            loss.backward()\n",
-        "            optimizer.step()\n",
-        "\n",
-        "        if ((epoch+1) % 10) == 0:\n",
-        "            print(f\"epoch: {epoch+1}\")\n",
-        "            print(loss)\n",
-        "\n",
-        "def test(data, model):\n",
-        "    dataloader = DataLoader(data,batch_size=32,shuffle=True)\n",
-        "    loss_fn = nn.CrossEntropyLoss()\n",
-        "    size = len(dataloader.dataset)\n",
-        "    num_batches = len(dataloader)\n",
-        "    model.eval()\n",
-        "    test_loss, correct = 0, 0\n",
-        "    with torch.no_grad():\n",
-        "        for X, y in dataloader:\n",
-        "            X, y = X.to(device), y.to(device)\n",
-        "            pred = model(X)\n",
-        "            test_loss += loss_fn(pred, y).item()\n",
-        "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
-        "    test_loss /= num_batches\n",
-        "    correct /= size\n",
-        "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
-        "\n",
-        "if __name__==\"__main__\":\n",
-        "\n",
-        "    start_time = time.time()\n",
-        "    training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
-        "    test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
-        "    net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
-        "    print(\"Network being trained is QMLP_RInv\")\n",
-        "    train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "    print(\"Training is completed\")\n",
-        "    test(model=net,data=test_data)\n",
-        "    print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-        "    #print(rmlp_net(torch.tensor(data[0][0])))\n"
+        "start_time = time.time()\n",
+        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
+        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
+        "net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is QMLP_RInv\")\n",
+        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")\n",
+        "test(model=net,data=test_data)\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+        "#print(rmlp_net(torch.tensor(data[0][0])))"
       ],
       "metadata": {
-        "id": "mLVAuHaN18_Z"
+        "id": "UjQASJlgfzI_"
       },
       "execution_count": null,
       "outputs": []
@@ -263,18 +222,16 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__==\"__main__\":\n",
-        "\n",
-        "    start_time = time.time()\n",
-        "    training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
-        "    test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
-        "    net = QMLP(num_data=7,num_cls=training_data.num_shapes)\n",
-        "    print(\"Network being trained is QMLP\")\n",
-        "    train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "    print(\"Training is completed\")\n",
-        "    test(model=net,data=test_data)\n",
-        "    print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-        "    #print(rmlp_net(torch.tensor(data[0][0])))\n"
+        "start_time = time.time()\n",
+        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
+        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
+        "net = QMLP(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is QMLP\")\n",
+        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")\n",
+        "test(model=net,data=test_data)\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+        "#print(rmlp_net(torch.tensor(data[0][0])))\n"
       ],
       "metadata": {
         "colab": {
