--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -194,24 +194,7 @@
         "import sys\n",
         "sys.path.append('.')\n",
         "from models import *\n",
-        "from cubeEdgeData import CubeEdge\n",
-        "\n",
-        "device = (\n",
-        "        \"cuda\" if torch.cuda.is_available()\n",
-        "        else \"mps\" if torch.backends.mps.is_available()\n",
-        "        else \"cpu\"\n",
-        "    )\n",
-        "\n",
-        "start_time = time.time()\n",
-        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
-        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
-        "net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
-        "print(\"Network being trained is QMLP_RInv\")\n",
-        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "print(\"Training is completed\")\n",
-        "test(model=net,data=test_data)\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-        "#print(rmlp_net(torch.tensor(data[0][0])))"
+        "from cubeEdgeData import CubeEdge"
       ],
       "metadata": {
         "id": "UjQASJlgfzI_"
@@ -222,16 +205,59 @@
     {
       "cell_type": "code",
       "source": [
+        "device = (\n",
+        "        \"cuda\" if torch.cuda.is_available()\n",
+        "        else \"mps\" if torch.backends.mps.is_available()\n",
+        "        else \"cpu\"\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "q5Fz91Xyjq9v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train QMLP_RINV\n",
+        "start_time = time.time()\n",
+        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
+        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
+        "net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is QMLP_RInv\")\n",
+        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")"
+      ],
+      "metadata": {
+        "id": "qxNFztqujjEj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(model=net,data=test_data)\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+      ],
+      "metadata": {
+        "id": "qhVv6-gxjx3H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train QMLP\n",
         "start_time = time.time()\n",
         "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
         "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
         "net = QMLP(num_data=7,num_cls=training_data.num_shapes)\n",
         "print(\"Network being trained is QMLP\")\n",
         "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "print(\"Training is completed\")\n",
-        "test(model=net,data=test_data)\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-        "#print(rmlp_net(torch.tensor(data[0][0])))\n"
+        "print(\"Training is completed\")\n"
       ],
       "metadata": {
         "colab": {
@@ -275,6 +301,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test(model=net,data=test_data)\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+      ],
+      "metadata": {
+        "id": "W5honnKYj2nN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
