--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Kanton99/QPU_NN_Project/blob/main/final_report.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qHQsrfDC0MUg"
+      },
       "source": [
         "# Quaternion Product Units for Deep Learning on 3D Rotation Groups\n",
         "\n",
@@ -49,13 +36,13 @@
         "$$\n",
         "\n",
         "$x = [x_{1}, ...,x_{N}] \\in X$ contains $N$ rotations. The above feature support and improve the efficency in theory. The suggested QPU is implemented in a quaternion neural network and is made compatible with existing  deep learning models."
-      ],
-      "metadata": {
-        "id": "qHQsrfDC0MUg"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "G0rOwcg-1ZO6"
+      },
       "source": [
         "### QPU\n",
         "\n",
@@ -99,13 +86,13 @@
         "\\begin{equation}\n",
         "(q_{2} \\otimes q_{1})  \\otimes [0, \\mathbf{v_{1}}] \\otimes (q^*_1 \\otimes q^*_2)\n",
         "\\end{equation}\n"
-      ],
-      "metadata": {
-        "id": "G0rOwcg-1ZO6"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2QlgCkmL13Mi"
+      },
       "source": [
         "### MODELS\n",
         "\n",
@@ -142,13 +129,13 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "2QlgCkmL13Mi"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "awnonblQ0WpG"
+      },
       "source": [
         "### DATASET GENERATION\n",
         "\n",
@@ -160,13 +147,13 @@
         "</figure>\n",
         "\n",
         "A dataset is generated to test the robustness of our QPU based models. The dataset consits of partial skeletons of an cube. The number of edges is selected first and the in the exam we have a used 4, 5, 6 and 7 number of edges. and as the edges increase the data samples increase. To be concise on how the datset is derived, an edge is considered and depending on the number of edges chosen, one of the adjacent edge of the previous edge is chosen to for a skeleton. Samples can be seen in the above picture and a set of sample are plotted at the end of the code.\n"
-      ],
-      "metadata": {
-        "id": "awnonblQ0WpG"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9DkdWkpo18s3"
+      },
       "source": [
         "### TRAIN AND TEST\n",
         "\n",
@@ -175,15 +162,28 @@
         "Computing the gradient of the weighting function are easy but the gradient of the Hamilton product chain is not simple. The diffrential of the quaternion is calculated and this is explained more detailed in the paper but has been excluded here.\n",
         "\n",
         "The computation of  the differential of loss $L$ for the quaternion is done (computed with autograd in Pytorch)."
-      ],
-      "metadata": {
-        "id": "9DkdWkpo18s3"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 101,
+      "metadata": {
+        "id": "UjQASJlgfzI_"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
-        "from train import *\n",
+        "%load_ext autoreload\n",
+        "%autoreload 2\n",
+        "\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.utils.data import DataLoader\n",
@@ -193,72 +193,130 @@
         "\n",
         "import sys\n",
         "sys.path.append('.')\n",
-        "from models import *\n",
-        "from cubeEdgeData import CubeEdge"
-      ],
-      "metadata": {
-        "id": "UjQASJlgfzI_"
-      },
-      "execution_count": null,
-      "outputs": []
+        "\n",
+        "\n",
+        "from CubeEdge.models import *\n",
+        "from CubeEdge.train import *"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 102,
+      "metadata": {
+        "id": "q5Fz91Xyjq9v"
+      },
+      "outputs": [],
       "source": [
         "device = (\n",
         "        \"cuda\" if torch.cuda.is_available()\n",
         "        else \"mps\" if torch.backends.mps.is_available()\n",
         "        else \"cpu\"\n",
-        "    )"
-      ],
-      "metadata": {
-        "id": "q5Fz91Xyjq9v"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    )\n",
+        "\n",
+        "epochs = 100"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Datasets generation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train QMLP_RINV\n",
-        "start_time = time.time()\n",
-        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
-        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
-        "net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
-        "print(\"Network being trained is QMLP_RInv\")\n",
-        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "print(\"Training is completed\")"
-      ],
+      "execution_count": 103,
       "metadata": {
         "id": "qxNFztqujjEj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
+        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "QMLP_RInv training and testing"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "test(model=net,data=test_data)\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+      "execution_count": 104,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Network being trained is QMLP_RInv\n",
+            "epoch: 10\n",
+            "tensor(0.4975, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 20\n",
+            "tensor(0.4783, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 30\n",
+            "tensor(0.3721, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 40\n",
+            "tensor(0.1247, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 50\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 60\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 70\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 80\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 90\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 100\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
+            "Training is completed\n",
+            "--- 49.37759757041931 seconds ---\n"
+          ]
+        }
       ],
+      "source": [
+        "start_time = time.time()\n",
+        "net = QMLP_RInv(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is QMLP_RInv\")\n",
+        "train(model=net,data=training_data,epochs=epochs,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 105,
       "metadata": {
         "id": "qhVv6-gxjx3H"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Test Error: \n",
+            " Accuracy: 4.0%, Avg loss:      nan \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "test(model=net,data=test_data)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "QMLP Training and testing"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Train QMLP\n",
-        "start_time = time.time()\n",
-        "training_data = CubeEdge(train=True, num_edges=7, use_quaternion=True,num_samples=500)\n",
-        "test_data = CubeEdge(train=False,num_edges=7,use_quaternion=True,num_samples=50)\n",
-        "net = QMLP(num_data=7,num_cls=training_data.num_shapes)\n",
-        "print(\"Network being trained is QMLP\")\n",
-        "train(model=net,data=training_data,epochs=100,lr=0.01,batch_size=training_data.num_shapes)\n",
-        "print(\"Training is completed\")\n"
-      ],
+      "execution_count": 106,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -266,53 +324,153 @@
         "id": "nvqHiXlMaez-",
         "outputId": "a8c5ad5a-57b1-41bd-e081-a930eddd94b3"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Network being trained is QMLP\n",
             "epoch: 10\n",
-            "tensor(0.2976, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.3752, grad_fn=<NllLossBackward0>)\n",
             "epoch: 20\n",
-            "tensor(0.2357, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.1884, grad_fn=<NllLossBackward0>)\n",
             "epoch: 30\n",
-            "tensor(0.4005, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.3368, grad_fn=<NllLossBackward0>)\n",
             "epoch: 40\n",
-            "tensor(0.4592, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.1910, grad_fn=<NllLossBackward0>)\n",
             "epoch: 50\n",
-            "tensor(0.1147, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.8753, grad_fn=<NllLossBackward0>)\n",
             "epoch: 60\n",
-            "tensor(0.5859, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.4335, grad_fn=<NllLossBackward0>)\n",
             "epoch: 70\n",
-            "tensor(0.3401, grad_fn=<NllLossBackward0>)\n",
+            "tensor(0.3042, grad_fn=<NllLossBackward0>)\n",
             "epoch: 80\n",
-            "tensor(0.3328, grad_fn=<NllLossBackward0>)\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
             "epoch: 90\n",
-            "tensor(0.1144, grad_fn=<NllLossBackward0>)\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
             "epoch: 100\n",
-            "tensor(0.3935, grad_fn=<NllLossBackward0>)\n",
+            "tensor(nan, grad_fn=<NllLossBackward0>)\n",
             "Training is completed\n",
-            "Test Error: \n",
-            " Accuracy: 90.0%, Avg loss: 0.325249 \n",
-            "\n",
-            "--- 102.6377477645874 seconds ---\n"
+            "--- 40.84937357902527 seconds ---\n"
           ]
         }
+      ],
+      "source": [
+        "# Train QMLP\n",
+        "start_time = time.time()\n",
+        "net = QMLP(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is QMLP\")\n",
+        "train(model=net,data=training_data,epochs=epochs,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "test(model=net,data=test_data)\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-      ],
+      "execution_count": 107,
       "metadata": {
         "id": "W5honnKYj2nN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Test Error: \n",
+            " Accuracy: 2.0%, Avg loss:      nan \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "test(model=net,data=test_data)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "RMLP Training and testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 108,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Network being trained is RMLP\n",
+            "epoch: 10\n",
+            "tensor(0.8018, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 20\n",
+            "tensor(0.5656, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 30\n",
+            "tensor(0.0900, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 40\n",
+            "tensor(0.3342, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 50\n",
+            "tensor(0.0602, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 60\n",
+            "tensor(0.2160, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 70\n",
+            "tensor(0.6386, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 80\n",
+            "tensor(0.4737, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 90\n",
+            "tensor(0.4677, grad_fn=<NllLossBackward0>)\n",
+            "epoch: 100\n",
+            "tensor(0.2123, grad_fn=<NllLossBackward0>)\n",
+            "Training is completed\n",
+            "--- 32.88420844078064 seconds ---\n"
+          ]
+        }
+      ],
+      "source": [
+        "start_time = time.time()\n",
+        "net = RMLP(num_data=7,num_cls=training_data.num_shapes)\n",
+        "print(\"Network being trained is RMLP\")\n",
+        "train(model=net,data=training_data,epochs=epochs,lr=0.01,batch_size=training_data.num_shapes)\n",
+        "print(\"Training is completed\")\n",
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 109,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Test Error: \n",
+            " Accuracy: 86.0%, Avg loss: 0.344236 \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "test(model=net,data=test_data)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
