Final final commit

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Quaternion Product Units for Deep Learning on 3D Rotation Groups\n",
         "\n",
-        "Student names : Anton Volkov (Matricola) & Keerthana Kumaresan (1998292)\n",
+        "Student names : Anton Volkov (1849922) & Keerthana Kumaresan (1998292)\n",
         "\n",
         "The paper chosen is about using quaternion, quaternion algebra and the law of 3D rotation groups instead of Euclidean methods to create a mechanism to enhance the robustness of deep learning models to rotation. The proposed Quaternion Prouduct Unit represent the data as 3D pure quaternions (with the scalar being zero) and merges them through weighted chain of Hamilton products.\n",
         "\n",
